--- a/geo_uaf_poc.html
+++ b/geo_uaf_poc.html
@@ -68,7 +68,7 @@
 
         geoSvcInfo.createGeolocation(geoRequest, true);
 
-        setTimeout(()=>{window.close();}, 2000);
+        setTimeout(()=>{geoSvcInfo.reset();}, 2000);
         // geoPtrInfo.setHighAccuracy(true);
       }
   </script>
